<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg_gradient">

    <include
        android:id="@+id/include"
        layout="@layout/layout_top_title" />

    <include layout="@layout/layout_bottom_navigation_view"/>

    <Button
        android:id="@+id/pay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pay_green"
        android:drawableTop="@drawable/baseline_attach_money_24_2"
        android:padding="15dp"
        android:text="@string/transact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_deposit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@drawable/baseline_arrow_downward_24"
        android:text="Deposit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pay_button"
        />

    <Button
        android:id="@+id/button_activities"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/blue"
        android:drawableLeft="@drawable/baseline_show_chart_24"
        android:text="Activities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pay_button" />

    <Button
        android:id="@+id/button_accounts"
        android:backgroundTint="@color/blue"
        android:text="@string/accounts"
        app:layout_constraintBottom_toTopOf="@+id/pay_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_account_circle_24"
        />

    <Button
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toTopOf="@id/pay_button"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="10dp"
        android:id="@+id/button_transfer"
        android:text="@string/transfer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_compare_arrows_24"/>

    <TextView
        android:id="@+id/welcome_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/welcome_email"
        app:layout_constraintBottom_toTopOf="@+id/pay_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/white"
        android:fontFamily="serif-monospace"
        android:textSize="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>