<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/login_bg_gradient">

    <include layout="@layout/layout_top_title"/>
    <include layout="@layout/layout_bottom_navigation_view"/>

    <TextView
        android:id="@+id/totalbalance_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_balance"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="400dp" />

    <TextView
        android:id="@+id/total_balance_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance"
        android:textSize="26dp"
        android:textColor="@color/pay_green"
        app:layout_constraintTop_toBottomOf="@+id/totalbalance_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <TextView
        android:id="@+id/mostvalued_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/most_valued_account"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="90dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle6"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/acc_view"
        app:layout_constraintTop_toBottomOf="@id/mostvalued_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/rectangle_5"
            android:src="@drawable/baseline_attach_money_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:paddingLeft="20dp"
            android:id="@+id/acc_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="account name"
            android:textSize="26sp"
            app:layout_constraintStart_toEndOf="@+id/image_view"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/acc_balance_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="balance"
            android:textSize="19sp"
            android:textColor="@color/pay_green"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/image_view"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingLeft="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>